Update command line docs with -lib arg and editor command

--- a/命令行.md
+++ b/命令行.md
@@ -12,14 +12,29 @@
 korelin <command> [arguments]
 ```
 
+或者直接运行脚本文件：
+
+```bash
+korelin <script-file>
+```
+
 ### 命令列表
 
 | 命令 | 参数 | 描述 |
 | :--- | :--- | :--- |
 | `version` | 无 | 打印 Korelin SDK 版本信息。 |
-| `run` | `<file-name>` | 编译指定的 Korelin 源文件为 KC (中间代码) 并立即运行。 |
+| `run` | `<file-name> [-lib file>field]` | 编译指定的 Korelin 源文件为 KC (中间代码) 并立即运行。支持 `-lib` 参数指定库映射文件。 |
 | `compile` | `<file-name>` | 仅将 Korelin 源文件编译为 KRIC，不运行程序。 |
+| `editor` | `[file-name]` | 打开内置的简易文本编辑器。 |
 | `help` | 无 | 显示命令的详细帮助信息。 |
+
+### 参数说明
+
+#### `run` 命令参数
+
+*   **`-lib <file>><field>`**: 指定一个 JSON 文件和其中的字段，用于加载第三方库路径映射。
+    *   格式：`配置文件路径>字段名`
+    *   作用：允许在运行时动态指定模块的查找路径，常用于大型项目或依赖管理。
 
 ### 示例
 
@@ -33,9 +48,28 @@ korelin version
 korelin run main.k
 ```
 
+**带库映射运行**
+假设 `korelin.json` 内容如下：
+```json
+{
+  "dependencies": {
+    "my_module": "./libs/my_module"
+  }
+}
+```
+使用以下命令运行，即可将 `my_module` 映射到指定路径：
+```bash
+korelin run main.k -lib korelin.json>dependencies
+```
+
 **仅编译**
 ```bash
 korelin compile main.k
+```
+
+**启动编辑器**
+```bash
+korelin editor main.k
 ```
 
 ---
